Css unificado no arquivo final.css

--- a/cadastrodevendedor.html
+++ b/cadastrodevendedor.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro de Vendedor</title>
-    <link rel="stylesheet" href="CSS/estilos.css">
-    <style>
+    <link rel="stylesheet" href="css/final.css">
+    <!-- <style>
         :root {
             --roxo: #A200CB;
         }
@@ -105,7 +105,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
-        h3 {
+        .cardscadastrovendedor h3 {
             padding-top: 20px;
             color: var(--roxo);
             text-transform: uppercase;
@@ -113,8 +113,7 @@
             text-align: center;
         }
 
-        label,
-        input {
+        .cardscadastrovendedor label, input {
             color: #707070;
         }
 
@@ -127,7 +126,7 @@
             margin-bottom: 50px;
         }
 
-        .informacao {
+        .cardscadastrovendedor .informacao {
             display: flex;
             flex-direction: column;
             border: solid 1px #707070;
@@ -139,7 +138,7 @@
             background-color: white;
         }
 
-        .cadvend {
+        .cardscadastrovendedor .cadvend {
             display: flex;
             flex-direction: column;
             width: 190px;
@@ -152,18 +151,18 @@
             align-items: center;
         }
 
-        .cadastro2 {
+        .cardscadastrovendedor .cadastro2 {
             display: flex;
             flex-direction: column;
             padding: 9px;
         }
 
-        .cadvend form input {
+        .cardscadastrovendedor .cadvend form input {
             width: 160px;
             padding: 5px;
         }
 
-        button {
+        .cardscadastrovendedor button {
             padding: 10px 20px;
             background-color: var(--roxo);
             border-radius: 4px;
@@ -171,13 +170,13 @@
             color: white;
         }
 
-        .btn {
+        .cardscadastrovendedor .btn {
             display: flex;
             justify-content: center;
             margin: auto;
             padding-bottom: 10px;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
