--- a/filtroProdutos.html
+++ b/filtroProdutos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Filtro de Produtos - Smart Sale</title>
-    <link rel="stylesheet" href="./css/filtroProdutos.css">
+    <link rel="stylesheet" href="./css/final.css">
 </head>
 
 <body>
