--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-    <style>
+    <!-- <style>
         :root {
             --roxo: #a200cb;
             --grafite: #707070;
@@ -357,11 +357,12 @@
         }
 
         .pdts2 {}
-    </style>
+    </style> -->
     <meta charset=" UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home - Smart Sale</title>
+    <link rel="stylesheet" href="./css/final.css">
 </head>
 
 <body>
@@ -395,181 +396,176 @@
         </div>
     </header>
     <main>
-
-        <div class="banner-home"></div>
-        <div class="container>">
-            <div class="meio-home">
-                <div class="whitebox">
-                    <div class="cnjt">
-                        <div>
-                            <img src="./img/img5.png" alt="Mãe cozinhando com a filha pequena" class="img-1">
-                        </div>
-                        <div class="txthome">
-                            <h3>Objetivo</h3>
-                            <p>Massa sociosqu etiam ullamcorper massa porta nulla mi mattis purus, vestibulum gravida
-                                eget facilisis a rutrum dapibus nam. litora eu phasellus scelerisque aenean fusce
-                                dapibus
-                                non eu consequat duis, commodo augue duis torquent libero tortor vulputate maecenas
-                                nunc. mauris taciti quisque imperdiet neque quisque sed lacus pellentesque, porta
-                                aliquet
-                                cras elit donec a malesuada euismod, aliquam ultricies hendrerit auctor quis velit
-                                pellentesque. ut urna ac neque dolor fringilla nam sem tristique mauris, torquent aptent
-                                dapibus eleifend dui mauris dictum laoreet lacinia, pharetra nunc ad interdum sed fames
-                                lorem morbi. dolor tellus curabitur lacus eros, imperdiet per orci, habitant ultricies
-                                metus .
-                            </p>
+        <div class="home_pag">
+            <div class="banner-home"></div>
+            <div class="container>">
+                <div class="meio-home">
+                    <div class="whitebox">
+                        <div class="cnjt">
+                            <div>
+                                <img src="./img/img5.png" alt="Mãe cozinhando com a filha pequena" class="img-1">
+                            </div>
+                            <div class="txthome">
+                                <h3>Objetivo</h3>
+                                <p>Massa sociosqu etiam ullamcorper massa porta nulla mi mattis purus, vestibulum
+                                    gravida
+                                    eget facilisis a rutrum dapibus nam. litora eu phasellus scelerisque aenean fusce
+                                    dapibus
+                                    non eu consequat duis, commodo augue duis torquent libero tortor vulputate maecenas
+                                    nunc. mauris taciti quisque imperdiet neque quisque sed lacus pellentesque, porta
+                                    aliquet
+                                    cras elit donec a malesuada euismod, aliquam ultricies hendrerit auctor quis velit
+                                    pellentesque. ut urna ac neque dolor fringilla nam sem tristique mauris, torquent
+                                    aptent
+                                    dapibus eleifend dui mauris dictum laoreet lacinia, pharetra nunc ad interdum sed
+                                    fames
+                                    lorem morbi. dolor tellus curabitur lacus eros, imperdiet per orci, habitant
+                                    ultricies
+                                    metus .
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
-        <div class="container" id="white">
-            <h3> Categorias </h3>
 
-            <div class="cardhome">
-                <div class="card">
-                    <a href="#">
-                        <h4>Cereais</h4>
-                        <img src="./img/img1.png" alt="">
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="#">
-                        <h4>Legumes</h4>
-                        <img src="./img/img2.png" alt="">
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="#">
-                        <h4>Carnes</h4>
-                        <img src="./img/img3.png" alt="">
-                    </a>
-                </div>
-                <div class="card"><a href="#">
-                        <h4>Vegetais</h4>
-                        <img src="./img/img7.png" alt="">
-                    </a>
-                </div>
-            </div>
+            <div class="container" id="white">
+                <h3> Categorias </h3>
 
-            <div class="ver">
-                <p><a href="#" class="btn">Ver mais</a></p>
-            </div>
-        </div>
-        <div class="linha">
-            <hr class="one">
-        </div>
-        <div class="roxo">
-            <section class="container">
-                <div class="rank">
-
-                    <p>RANKING</p>
-
-                    <div class="branco"><img src="./img/icons/crown.png " alt="" class="coroa">Arthur Bruno</div>
-                    <div class="branco"><img src="./img/icons/crown-1.png" alt="" class="coroa">Gabriel Silva</div>
-                    <div class="branco"><img src="./img/icons/crown-2.png " alt="" class="coroa">Kaique Santos</div>
-
-                </div>
-            </section>
-        </div>
-        <section class="container">
-            <section class="tongs">
-                <h4>Instituições beneficiadas</h4>
-            </section>
-            <div class="ongs">
-                <a href="#"><img src="./img/ongs/ong1.png" alt=""></a>
-                <a href="#"><img src="./img/ongs/ong2.png" alt=""></a>
-                <a href="#"><img src="./img/ongs/ong3.png" alt=""></a>
-                <a href="#"><img src="./img/ongs/ong4.png" alt=""></a>
-            </div>
-        </section>
-
-        <div class="pdt">
-            <h4>Produtos</h4>
-            <section class="container">
-                <div class="pdts2">
-                    <div class="cardhome2">
-
-                        <div class="card">
-                            <a href="#" class="pdt1"><img src="./img/pdts/6.png" alt="">
-                                <p>Ana Maria
-                                    R$2,00<br>
-                                    Mercado X<br>
-                                    X dias apenas</p>
-                            </a></div>
-                        <div class="card">
-                            <a href="#" class="pdt1"><img src="./img/pdts/5.png" alt="">
-                                <p>Ana Maria
-                                    R$2,00<br>
-                                    Mercado X<br>
-                                    X dias apenas</p>
-                            </a></div>
-                        <div class="card">
-                            <a href="#" class="pdt1"><img src="./img/pdts/1.png" alt="">
-                                <p>Ana Maria
-                                    R$2,00<br>
-                                    Mercado X<br>
-                                    X dias apenas</p>
-                            </a></div>
-                        <div class="card">
-                            <a href="#" class="pdt1"><img src="./img/pdts/2.png" alt="">
-                                <p>Ana Maria
-                                    R$2,00<br>
-                                    Mercado X<br>
-                                    X dias apenas</p>
-                            </a>
-                        </div>
-
-
-
-
-
-
-
-                        <div class="card">
-                            <a href="#" class="pdt1"><img src="./img/pdts/1.png" alt="">
-                                <p>Ana Maria
-                                    R$2,00<br>
-                                    Mercado X<br>
-                                    X dias apenas</p>
-                            </a></div>
-                        <div class="card">
-                            <a href="#" class="pdt1"><img src="./img/pdts/2.png" alt="">
-                                <p>Ana Maria
-                                    R$2,00<br>
-                                    Mercado X<br>
-                                    X dias apenas</p>
-                            </a></div>
-                        <div class="card">
-                            <a href="#" class="pdt1"><img src="./img/pdts/5.png" alt="">
-                                <p>Ana Maria
-                                    R$2,00<br>
-                                    Mercado X<br>
-                                    X dias apenas</p>
-                            </a></div>
-                        <div class="card">
-                            <a href="#" class="pdt1"><img src="./img/pdts/6.png" alt="">
-                                <p>Ana Maria
-                                    R$2,00<br>
-                                    Mercado X<br>
-                                    X dias apenas</p>
-                            </a>
-                        </div>
-
+                <div class="cardhome">
+                    <div class="card">
+                        <a href="#">
+                            <h4>Cereais</h4>
+                            <img src="./img/img1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="#">
+                            <h4>Legumes</h4>
+                            <img src="./img/img2.png" alt="">
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="#">
+                            <h4>Carnes</h4>
+                            <img src="./img/img3.png" alt="">
+                        </a>
+                    </div>
+                    <div class="card"><a href="#">
+                            <h4>Vegetais</h4>
+                            <img src="./img/img7.png" alt="">
+                        </a>
                     </div>
                 </div>
-        </div>
-        </div>
-        </div>
-        </div>
-        </div>
-        </section>
-        </div>
+
+                <div class="ver">
+                    <p><a href="#" class="btn">Ver mais</a></p>
+                </div>
+            </div>
+            <div class="linha">
+                <hr class="one">
+            </div>
+            <div class="roxo">
+                <section class="container">
+                    <div class="rank">
+
+                        <p>RANKING</p>
+
+                        <div class="branco"><img src="./img/icons/crown.png " alt="" class="coroa">Arthur Bruno</div>
+                        <div class="branco"><img src="./img/icons/crown-1.png" alt="" class="coroa">Gabriel Silva</div>
+                        <div class="branco"><img src="./img/icons/crown-2.png " alt="" class="coroa">Kaique Santos</div>
+
+                    </div>
+                </section>
+            </div>
+            <section class="container">
+                <section class="tongs">
+                    <h4>Instituições beneficiadas</h4>
+                </section>
+                <div class="ongs">
+                    <a href="#"><img src="./img/ongs/ong1.png" alt=""></a>
+                    <a href="#"><img src="./img/ongs/ong2.png" alt=""></a>
+                    <a href="#"><img src="./img/ongs/ong3.png" alt=""></a>
+                    <a href="#"><img src="./img/ongs/ong4.png" alt=""></a>
+                </div>
+            </section>
+
+            <div class="pdt">
+                <h4>Produtos</h4>
+                <section class="container">
+                    <div class="pdts2">
+                        <div class="cardhome2">
+
+                            <div class="card">
+                                <a href="#" class="pdt1"><img src="./img/pdts/6.png" alt="">
+                                    <p>Ana Maria
+                                        R$2,00<br>
+                                        Mercado X<br>
+                                        X dias apenas</p>
+                                </a></div>
+                            <div class="card">
+                                <a href="#" class="pdt1"><img src="./img/pdts/5.png" alt="">
+                                    <p>Ana Maria
+                                        R$2,00<br>
+                                        Mercado X<br>
+                                        X dias apenas</p>
+                                </a></div>
+                            <div class="card">
+                                <a href="#" class="pdt1"><img src="./img/pdts/1.png" alt="">
+                                    <p>Ana Maria
+                                        R$2,00<br>
+                                        Mercado X<br>
+                                        X dias apenas</p>
+                                </a></div>
+                            <div class="card">
+                                <a href="#" class="pdt1"><img src="./img/pdts/2.png" alt="">
+                                    <p>Ana Maria
+                                        R$2,00<br>
+                                        Mercado X<br>
+                                        X dias apenas</p>
+                                </a>
+                            </div>
 
 
 
-        </div>
+
+
+
+
+                            <div class="card">
+                                <a href="#" class="pdt1"><img src="./img/pdts/1.png" alt="">
+                                    <p>Ana Maria
+                                        R$2,00<br>
+                                        Mercado X<br>
+                                        X dias apenas</p>
+                                </a></div>
+                            <div class="card">
+                                <a href="#" class="pdt1"><img src="./img/pdts/2.png" alt="">
+                                    <p>Ana Maria
+                                        R$2,00<br>
+                                        Mercado X<br>
+                                        X dias apenas</p>
+                                </a></div>
+                            <div class="card">
+                                <a href="#" class="pdt1"><img src="./img/pdts/5.png" alt="">
+                                    <p>Ana Maria
+                                        R$2,00<br>
+                                        Mercado X<br>
+                                        X dias apenas</p>
+                                </a></div>
+                            <div class="card">
+                                <a href="#" class="pdt1"><img src="./img/pdts/6.png" alt="">
+                                    <p>Ana Maria
+                                        R$2,00<br>
+                                        Mercado X<br>
+                                        X dias apenas</p>
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+            </div>        
+        </div>        
     </main>
     <footer>
         <p>SMART SALE ©2019</p>
@@ -577,8 +573,3 @@
 </body>
 
 </html>
-
-
-
-
-expandir algumas coisas
