--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Página do Produto - Smart Sale</title>
+    <link rel="stylesheet" href="./css/final.css">
     <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
     <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <style>
+    <!-- <style>
         * {
             margin: 0%;
             padding: 0%;
@@ -478,7 +479,7 @@
             width: 570px;
             border-radius: 5px;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -514,131 +515,133 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <section class="produto">
-                <div class="esquerdo">
-                    <div>
-                        <img src="./img/Agrupar 61.jpg" alt="Imagem do Feijão Carioca Tipo 1" class="imagem-produto">
-                    </div>
-                </div>
-                <div class="direito">
-                    <div>
-                        <p class="nomeProduto">Feijão Carioca Tipo 1 - 1Kg</p>
-                        <p class="precoProduto">R$5,00</p>
-                    </div>
-                    <div class="contQuantBotoes">
-                        <div class="quantidade">
-                            <label>Quantidade</label>
-                            <input type="number" name="quantidade" id="">
-                        </div>
-                        <div class="botoes">
-                            <a class="botaoReservar" href="#">Reservar</a>
-                            <!-- <a class="botaoComprar" href="#">Comprar</a> -->
+        <div class="paginaProduto_pag">
+            <div class="container">
+                <section class="produto">
+                    <div class="esquerdo">
+                        <div>
+                            <img src="./img/Agrupar 61.jpg" alt="Imagem do Feijão Carioca Tipo 1" class="imagem-produto">
                         </div>
                     </div>
-                </div>
-            </section>
-            <section class="outrosProdutos">
-                <p class="relacionados">Produtos Relacionados</p>
-                <div class="produtos">
-                    <div class="cardProduto">
-                        <img src="./img/download.jpg" alt="Feijão A">
-                        <div class="textoCard">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
+                    <div class="direito">
+                        <div>
+                            <p class="nomeProduto">Feijão Carioca Tipo 1 - 1Kg</p>
+                            <p class="precoProduto">R$5,00</p>
                         </div>
-                        <div class="botaoCard">
-                            <a href="#" class="btn">Reserve</a>
-                        </div>
-                    </div>
-                    <div class="cardProduto">
-                        <img src="./img/download.jpg" alt="Feijão A">
-                        <div class="textoCard">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                        </div>
-                        <div class="botaoCard">
-                            <a href="#" class="btn">Reserve</a>
+                        <div class="contQuantBotoes">
+                            <div class="quantidade">
+                                <label>Quantidade</label>
+                                <input type="number" name="quantidade" id="">
+                            </div>
+                            <div class="botoes">
+                                <a class="botaoReservar" href="#">Reservar</a>
+                                <!-- <a class="botaoComprar" href="#">Comprar</a> -->
+                            </div>
                         </div>
                     </div>
-                    <div class="cardProduto">
-                        <img src="./img/download.jpg" alt="Feijão A">
-                        <div class="textoCard">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
+                </section>
+                <section class="outrosProdutos">
+                    <p class="relacionados">Produtos Relacionados</p>
+                    <div class="produtos">
+                        <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <div class="textoCard">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                            </div>
+                            <div class="botaoCard">
+                                <a href="#" class="btn">Reserve</a>
+                            </div>
                         </div>
-                        <div class="botaoCard">
-                            <a href="#" class="btn">Reserve</a>
+                        <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <div class="textoCard">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                            </div>
+                            <div class="botaoCard">
+                                <a href="#" class="btn">Reserve</a>
+                            </div>
+                        </div>
+                        <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <div class="textoCard">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                            </div>
+                            <div class="botaoCard">
+                                <a href="#" class="btn">Reserve</a>
+                            </div>
+                        </div>
+                        <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <div class="textoCard">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                            </div>
+                            <div class="botaoCard">
+                                <a href="#" class="btn">Reserve</a>
+                            </div>
+                        </div>
+                        <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <div class="textoCard">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                            </div>
+                            <div class="botaoCard">
+                                <a href="#" class="btn">Reserve</a>
+                            </div>
+                        </div>
+                        <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <div class="textoCard">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                            </div>
+                            <div class="botaoCard">
+                                <a href="#" class="btn">Reserve</a>
+                            </div>
+                        </div>
+                        <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <div class="textoCard">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                            </div>
+                            <div class="botaoCard">
+                                <a href="#" class="btn">Reserve</a>
+                            </div>
+                        </div>
+                        <div class="cardProduto">
+                            <img src="./img/download.jpg" alt="Feijão A">
+                            <div class="textoCard">
+                                <p>Feijão Codil</p>
+                                <p>R$ 10,00</p>
+                                <p>X Unidades Disponíveis</p>
+                                <p>Campos Elíseos - São Paulo</p>
+                            </div>
+                            <div class="botaoCard">
+                                <a href="#" class="btn">Reserve</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="cardProduto">
-                        <img src="./img/download.jpg" alt="Feijão A">
-                        <div class="textoCard">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                        </div>
-                        <div class="botaoCard">
-                            <a href="#" class="btn">Reserve</a>
-                        </div>
-                    </div>
-                    <div class="cardProduto">
-                        <img src="./img/download.jpg" alt="Feijão A">
-                        <div class="textoCard">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                        </div>
-                        <div class="botaoCard">
-                            <a href="#" class="btn">Reserve</a>
-                        </div>
-                    </div>
-                    <div class="cardProduto">
-                        <img src="./img/download.jpg" alt="Feijão A">
-                        <div class="textoCard">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                        </div>
-                        <div class="botaoCard">
-                            <a href="#" class="btn">Reserve</a>
-                        </div>
-                    </div>
-                    <div class="cardProduto">
-                        <img src="./img/download.jpg" alt="Feijão A">
-                        <div class="textoCard">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                        </div>
-                        <div class="botaoCard">
-                            <a href="#" class="btn">Reserve</a>
-                        </div>
-                    </div>
-                    <div class="cardProduto">
-                        <img src="./img/download.jpg" alt="Feijão A">
-                        <div class="textoCard">
-                            <p>Feijão Codil</p>
-                            <p>R$ 10,00</p>
-                            <p>X Unidades Disponíveis</p>
-                            <p>Campos Elíseos - São Paulo</p>
-                        </div>
-                        <div class="botaoCard">
-                            <a href="#" class="btn">Reserve</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
+                </section>
+            </div>
         </div>
     </main>
     <footer>
