--- a/quemsomos.html
+++ b/quemsomos.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quem somos</title>
-    <!-- <link rel="stylesheet" href="CSS/estilos.CSS"> -->
-    <style>
+    <link rel="stylesheet" href="css/final.css">
+    <!-- <style>
         :root {
             --roxo: #A200CB;
         }
@@ -128,8 +128,7 @@
             padding: 25px;
         }
 
-        .one,
-        .two {
+        .one, .two {
             color: #707070;
         }
 
@@ -156,7 +155,7 @@
             width: 547, 12px;
             height: 571, 46;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -190,26 +189,28 @@
         </div>
     </header>
     <main>
-        <div class="bannerquemsomos"></div>
-        <div class="tudo">
-            <div class="caixao">
-                <div class="one">
-                    <h2>Quem somos</h2>
-                    <p>
-                        A Smart Sale é uma aplicação de marketplace na área de tecnologia criada no Dia 12 de Agosto de
-                        2019 com o objetivo de atender a necessidade de pessoas que desejam vender seus produtos perto
-                        da data de validade, assim evitando perda de produtos.
-                    </p>
+        <div class="quemsomos_pag">
+            <div class="bannerquemsomos"></div>
+            <div class="tudo">
+                <div class="caixao">
+                    <div class="one">
+                        <h2>Quem somos</h2>
+                        <p>
+                            A Smart Sale é uma aplicação de marketplace na área de tecnologia criada no Dia 12 de Agosto de
+                            2019 com o objetivo de atender a necessidade de pessoas que desejam vender seus produtos perto
+                            da data de validade, assim evitando perda de produtos.
+                        </p>
+                    </div>
+                    <div class="two">
+                        <h2>O que propomos</h2>
+                        <p>
+                            Propomos ajuda a pessoas que desejam vender seus produtos seja alimento ou vestuário, de maneira
+                            segura e eficiente.
+                        </p>
+                    </div>
                 </div>
-                <div class="two">
-                    <h2>O que propomos</h2>
-                    <p>
-                        Propomos ajuda a pessoas que desejam vender seus produtos seja alimento ou vestuário, de maneira
-                        segura e eficiente.
-                    </p>
-                </div>
+                <img src="img/União 19.png" alt="Imagem ampliada do Logo do Site">
             </div>
-            <img src="img/União 19.png" alt="Imagem ampliada do Logo do Site">
         </div>
     </main>
     <footer>
