--- a/PerguntasFrequentes.html
+++ b/PerguntasFrequentes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Perguntas Frequentes</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/final.css">
     <style>
         :root {
             --roxo: #a200cb;
@@ -217,34 +217,36 @@
         </div>
     </header>
     <main>
-        <div class="container1">
-            <div class="texto">
-                <img src="img/sonhar-com-mercado.jpg" alt=" Dúvidas Mercado">
-                <h2>Perguntas 1</h2>
-                <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-                <h2>Perguntas 1</h2>
-                <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-                <h2>Perguntas 1</h2>
-                <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-            </div>
-            <div class="text">
-                <img src="img/armario.jpg " alt="Dúvidas Vestuário">
-                <h2>Perguntas 1</h2>
-                <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-                <h2>Perguntas 1</h2>
-                <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-                <h2>Perguntas 1</h2>
-                <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-            </div>
-            <div class="duvidas">
-                <h4>Não encontrou sua dúvida, escreva pra nós</h4>
-                <label>
-                    <input type="text" placeholder="Escreva sua dúvida..." aria-label="Digite sua dúvida..."
-                        name="Dúvidas" required>
-                </label>
-            </div>
-            <div class="enviar">
-                <button type="submit" id="enviar">ENVIAR</button>
+        <div class="faq_pag">
+            <div class="container1">
+                <div class="texto">
+                    <img src="img/sonhar-com-mercado.jpg" alt=" Dúvidas Mercado">
+                    <h2>Perguntas 1</h2>
+                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
+                    <h2>Perguntas 1</h2>
+                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
+                    <h2>Perguntas 1</h2>
+                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
+                </div>
+                <div class="text">
+                    <img src="img/armario.jpg " alt="Dúvidas Vestuário">
+                    <h2>Perguntas 1</h2>
+                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
+                    <h2>Perguntas 1</h2>
+                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
+                    <h2>Perguntas 1</h2>
+                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
+                </div>
+                <div class="duvidas">
+                    <h4>Não encontrou sua dúvida, escreva pra nós</h4>
+                    <label>
+                        <input type="text" placeholder="Escreva sua dúvida..." aria-label="Digite sua dúvida..."
+                            name="Dúvidas" required>
+                    </label>
+                </div>
+                <div class="enviar">
+                    <button type="submit" id="enviar">ENVIAR</button>
+                </div>
             </div>
         </div>
     </main>
