--- a/cadastrodeprodutodoacao.html
+++ b/cadastrodeprodutodoacao.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro de Produto</title>
-    <link rel="stylesheet" href="CSS/estilos.css">
+    <link rel="stylesheet" href="css/final.css">
     <style>
+/*         
         :root {
             --roxo: #A200CB;
             --cinza: grey;
@@ -29,7 +30,7 @@
             background-position: center;
         }
 
-        .card {
+        .cardCadastro {
             display: flex;
             flex-direction: column;
             width: 600px;
@@ -44,11 +45,12 @@
             margin-bottom: 40px;
         }
 
-        .card h2 {
+        .cardCadastro h2 {
             font-size: 40px;
             padding: 20px;
             color: var(--roxo);
         }
+        
         form label {
             font-size: 20px;
             color: var(--roxo);
@@ -78,15 +80,15 @@
         form input {
             display: flex;
             /*Flexibilizar o conteudo do input dentro do formulario*/
-            flex-direction: column;
+            /* flex-direction: column; */
             /* Coloquei em coluna e assim quebra linha*/
-            padding: 10px;
+            /* /* /* padding: 10px;
             width: 230px;
         }
 
         .campo {
             /* width: 500px; */
-            display: flex;
+            /* display: flex;
             justify-content: space-between;
             padding: 10px;
         }
@@ -109,9 +111,9 @@
             border-radius: 4px;
             border: solid 1px var(--roxo);
             color: white;
-        }
+        } */
 
-        hr {
+        /* hr {
             margin: 30px;
         }
 
@@ -139,10 +141,10 @@
 
         .fotos img {
             width: 80px;
-        }
+        } */
 
         /*Footer*/
-        header {
+        /* header {
             height: 130px;
             display: flex;
             justify-content: space-between;
@@ -221,9 +223,9 @@
             text-align: center;
             height: 100px;
             display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+            align-items: center; */
+            /* justify-content: center; */
+        /* }  */
     </style>
 </head>
 
@@ -258,68 +260,70 @@
         </div>
     </header>
     <main>
-        <div class="card">
-            <h2>Cadastro de Produto</h2>
-            <form method="POST" id="form_cadastro">
-                <div class="campo">
-                    <label>Nome</label>
-                    <input type="text" aria-label="Digite seu nome" name="nome" required>
-                </div>
-                <div class="campo">
-                    <label>Tamanho</label>
-                    <input type="text" aria-label="Digite o tamanho" name="tamanho" required>
-                </div>
-                <div class="campo">
-                    <label>Peso</label>
-                    <input type="text" aria-label="Digite o peso" name="peso" required>
-                </div>
-                <div class="campo">
-                    <label>Quantidade</label>
-                    <input type="text" aria-label="Digite a quantidade" name="quantidade" required>
-                </div>
-                <div class="campo">
-                    <label>Cor</label>
-                    <input type="text" aria-label="Digite a cor" name="cor" required>
-                </div>
-                <div class="campo">
-                    <label>Volume</label>
-                    <input type="text" aria-label="Digite o volume" name="volume" required>
-                </div>
-                <div class="campo">
-                    <label>Data de Validade</label>
-                    <input type="text" aria-label="Indique a data de validade" name="dtvalidade" required>
-                </div>
-                <div class="campo">
-                    <label>Data limite de Venda</label>
-                    <input type="text" aria-label="Limite para venda" name="dtlimvd" required>
-                </div>
-                <div class="campo">
-                    <label>Data limite para doação</label>
-                    <input type="text" aria-label="Limite para doação" name="dtlimdo" required>
-                </div>
-                <hr>
-                <div class="radios">
-                    <div class="radio">
-                        <input type="radio" aria-label="Doação" name="tipo" required>
-                        <label>Doação</label>
+        <div class="fundoCadastro">
+            <div class="cardCadastro">
+                <h2>Cadastro de Produto</h2>
+                <form method="POST" id="form_cadastro">
+                    <div class="campo">
+                        <label>Nome</label>
+                        <input type="text" aria-label="Digite seu nome" name="nome" required>
                     </div>
-                    <div class="radio2">
-                        <input type="radio" aria-label="Venda" name="tipo" required>
-                        <label>Venda</label>
+                    <div class="campo">
+                        <label>Tamanho</label>
+                        <input type="text" aria-label="Digite o tamanho" name="tamanho" required>
                     </div>
-                </div>
-                <hr> <!-- Utilizada para inserir uma linha-->
-                <label>Fotos</label>
-                <div class="fotos">
-                    <!-- <img src="img/iconcam.png" alt="Icone camera"> -->
-                    <input type="file" accept="image/png, image/jpeg"
-                        placeholder="Adicionar fotos Você também pode arrasta-lás"
-                        aria-label="Adicionar fotos Você também pode arrasta-lás" name="foto">
-                </div>
-                <div class="btn">
-                    <button type=submit>Cadastrar</button>
-                </div>
-            </form>
+                    <div class="campo">
+                        <label>Peso</label>
+                        <input type="text" aria-label="Digite o peso" name="peso" required>
+                    </div>
+                    <div class="campo">
+                        <label>Quantidade</label>
+                        <input type="text" aria-label="Digite a quantidade" name="quantidade" required>
+                    </div>
+                    <div class="campo">
+                        <label>Cor</label>
+                        <input type="text" aria-label="Digite a cor" name="cor" required>
+                    </div>
+                    <div class="campo">
+                        <label>Volume</label>
+                        <input type="text" aria-label="Digite o volume" name="volume" required>
+                    </div>
+                    <div class="campo">
+                        <label>Data de Validade</label>
+                        <input type="text" aria-label="Indique a data de validade" name="dtvalidade" required>
+                    </div>
+                    <div class="campo">
+                        <label>Data limite de Venda</label>
+                        <input type="text" aria-label="Limite para venda" name="dtlimvd" required>
+                    </div>
+                    <div class="campo">
+                        <label>Data limite para doação</label>
+                        <input type="text" aria-label="Limite para doação" name="dtlimdo" required>
+                    </div>
+                    <hr>
+                    <div class="radios">
+                        <div class="radio">
+                            <input type="radio" aria-label="Doação" name="tipo" required>
+                            <label>Doação</label>
+                        </div>
+                        <div class="radio2">
+                            <input type="radio" aria-label="Venda" name="tipo" required>
+                            <label>Venda</label>
+                        </div>
+                    </div>
+                    <hr> <!-- Utilizada para inserir uma linha-->
+                    <label>Fotos</label>
+                    <div class="fotos">
+                        <!-- <img src="img/iconcam.png" alt="Icone camera"> -->
+                        <input type="file" accept="image/png, image/jpeg"
+                            placeholder="Adicionar fotos Você também pode arrasta-lás"
+                            aria-label="Adicionar fotos Você também pode arrasta-lás" name="foto">
+                    </div>
+                    <div class="btnCadastro">
+                        <button type=submit>Cadastrar</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </main>
     <footer>
