--- a/cadastrodeprodutovenda.html
+++ b/cadastrodeprodutovenda.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro de Produto</title>
-    <!-- <link rel="stylesheet" href="CSS/estilos.css"> -->
-    <style>
+    <link rel="stylesheet" href="css/final.css">
+    <!-- <style>
         :root {
             --roxo: #A200CB;
             --cinza: grey;
@@ -238,7 +238,7 @@
             align-items: center;
             justify-content: center;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -272,72 +272,74 @@
         </div>
     </header>
     <main>
-        <div class="card">
-            <h2>Cadastro de Produto</h2>
-            <form method="POST">
-                <div class="campo">
-                    <label>Nome</label>
-                    <input type="text" aria-label="Digite seu nome" name="nome" required>
-                </div>
-                <div class="campo">
-                    <label>Tamanho</label>
-                    <input type="text" aria-label="Digite o tamanho" name="tamanho" required>
-                </div>
-                <div class="campo">
-                    <label>Peso</label>
-                    <input type="text" aria-label="Digite o peso" name="peso" required>
-                </div>
-                <div class="campo">
-                    <label>Quantidade</label>
-                    <input type="text" aria-label="Digite a quantidade" name="quantidade" required>
-                </div>
-                <div class="campo">
-                    <label>Cor</label>
-                    <input type="text" aria-label="Digite a cor" name="cor" required>
-                </div>
-                <div class="campo">
-                    <label>Volume</label>
-                    <input type="text" aria-label="Digite o volume" name="volume" required>
-                </div>
-                <div class="campo">
-                    <label>Data de Validade</label>
-                    <input type="text" aria-label="Indique a data de validade" name="dtvalidade" required>
-                </div>
-                <div class="campo">
-                    <label>Data limite de Venda</label>
-                    <input type="text" aria-label="Limite para venda" name="dtlimvd" required>
-                </div>
-                <div class="campo">
-                    <label>Data limite para doação</label>
-                    <input type="text" aria-label="Limite para doação" name="dtlimdo" required>
-                </div>
-                <hr>
-                <div class="radios">
-                    <div class="radio">
-                        <input type="radio" aria-label="Doação" name="tipo" required>
-                        <label>Doação</label>
+        <div class="fundoCadastro">
+            <div class="cardCadastro">
+                <h2>Cadastro de Produto</h2>
+                <form method="POST" id="form_cadastro_venda">
+                    <div class="campo">
+                        <label>Nome</label>
+                        <input type="text" aria-label="Digite seu nome" name="nome" required>
                     </div>
-                    <div class="radio2">
-                        <input type="radio" aria-label="Venda" name="tipo" required>
-                        <label>Venda</label>
+                    <div class="campo">
+                        <label>Tamanho</label>
+                        <input type="text" aria-label="Digite o tamanho" name="tamanho" required>
                     </div>
-                </div>
-                <div class="opcvenda">
-                    <label>Valor unitário</label>
-                    <input type="text" aria-label="Digite o valor unitário">
-                </div>
-                <hr> <!-- Utilizada para inserir uma linha-->
-                <label>Fotos</label>
-                <div class="fotos">
-                    <!-- <img src="img/iconcam.png" alt="Icone camera"> -->
-                    <input type="file" accept="image/png, image/jpeg"
-                        placeholder="Adicionar fotos Você também pode arrasta-lás"
-                        aria-label="Adicionar fotos Você também pode arrasta-lás" name="foto">
-                </div>
-                <div class="btn">
-                    <button type=submit>Cadastrar</button>
-                </div>
-            </form>
+                    <div class="campo">
+                        <label>Peso</label>
+                        <input type="text" aria-label="Digite o peso" name="peso" required>
+                    </div>
+                    <div class="campo">
+                        <label>Quantidade</label>
+                        <input type="text" aria-label="Digite a quantidade" name="quantidade" required>
+                    </div>
+                    <div class="campo">
+                        <label>Cor</label>
+                        <input type="text" aria-label="Digite a cor" name="cor" required>
+                    </div>
+                    <div class="campo">
+                        <label>Volume</label>
+                        <input type="text" aria-label="Digite o volume" name="volume" required>
+                    </div>
+                    <div class="campo">
+                        <label>Data de Validade</label>
+                        <input type="text" aria-label="Indique a data de validade" name="dtvalidade" required>
+                    </div>
+                    <div class="campo">
+                        <label>Data limite de Venda</label>
+                        <input type="text" aria-label="Limite para venda" name="dtlimvd" required>
+                    </div>
+                    <div class="campo">
+                        <label>Data limite para doação</label>
+                        <input type="text" aria-label="Limite para doação" name="dtlimdo" required>
+                    </div>
+                    <hr>
+                    <div class="radios">
+                        <div class="radio">
+                            <input type="radio" aria-label="Doação" name="tipo" required>
+                            <label>Doação</label>
+                        </div>
+                        <div class="radio2">
+                            <input type="radio" aria-label="Venda" name="tipo" required>
+                            <label>Venda</label>
+                        </div>
+                    </div>
+                    <div class="opcvenda">
+                        <label>Valor unitário</label>
+                        <input type="text" aria-label="Digite o valor unitário">
+                    </div>
+                    <hr> <!-- Utilizada para inserir uma linha-->
+                    <label>Fotos</label>
+                    <div class="fotos">
+                        <!-- <img src="img/iconcam.png" alt="Icone camera"> -->
+                        <input type="file" accept="image/png, image/jpeg"
+                            placeholder="Adicionar fotos Você também pode arrasta-lás"
+                            aria-label="Adicionar fotos Você também pode arrasta-lás" name="foto">
+                    </div>
+                    <div class="btnCadastro">
+                        <button type=submit>Cadastrar</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </main>
     <footer>
