--- a/cadastroelogin.html
+++ b/cadastroelogin.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro e Login</title>
-    <!-- <link rel="stylesheet" href="CSS/estilos.css"> -->
-    <style>
+    <link rel="stylesheet" href="css/final.css">
+    <!-- <style>
         :root {
             --roxo: #A200CB;
         }
@@ -157,9 +157,7 @@
             width: 160px;
         }
 
-        h3,
-        label,
-        input {
+        h3, label, input {
             color: #707070;
         }
 
@@ -169,13 +167,11 @@
             padding-bottom: 15px;
         }
 
-        .login,
-        .cadastro {
+        .login, .cadastro {
             padding: 9px;
         }
 
-        .login input,
-        .cadastro input {
+        .login input, .cadastro input {
             padding: 5px;
         }
 
@@ -193,7 +189,7 @@
             border: solid 1px var(--roxo);
             color: white;
         }
-    </style>
+    </style> -->
     <style>
 
     </style>
@@ -230,82 +226,84 @@
         </div>
     </header>
     <main>
-        <div class="cards">
-            <div class="card_1">
-                <h3>FAÇA LOGIN</h3>
-                <form method="POST">
-                    <div class="login">
-                        <label>Usuário</label>
-                        <input type="text" placeholder="Digite seu nome..." aria-label="Digite seu nome..."
-                            name="usuario" required>
-                    </div>
-                    <div class="login">
-                        <label>Senha</label>
-                        <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
-                            name="senha" required>
-                    </div>
-                    <div class="btn">
-                        <button type="submit"><b>ACESSAR</b></button>
-                    </div>
-                </form>
-            </div>
-            <div class="card_2">
-                <h3>CADASTRAR-SE</h3>
-                <form method="POST">
-                    <div class="cadastro">
-                        <label>Nome</label>
-                        <input type="text" placeholder="Digite o nome completo..."
-                            aria-label="Digite o nome completo..." name="nome" required>
-                    </div>
-                    <div class="cadastro">
-                        <label>CPF</label>
-                        <input type="text" placeholder="Digite seu CPF..." aria-label="Digite seu CPF..." name="cpf"
-                            required>
-                    </div>
-                    <div class="cadastro">
-                        <label>Idade</label>
-                        <input type="text" placeholder="Digite sua idade" aria-label="Digite sua idade.." name="idade"
-                            required>
-                    </div>
-                    <div class="cadastro">
-                        <label>Telefone</label>
-                        <input type="text" placeholder="Digite seu telefone..." aria-label="Digite seu telefone..."
-                            name="tel" required>
-                    </div>
-                    <div class="cadastro">
-                        <label>CEP</label>
-                        <input type="text" placeholder="Digite seu CEP..." aria-label="Digite seu CEP..." name="cep"
-                            required>
-                    </div>
-                    <div class="cadastro">
-                        <label>Endereço</label>
-                        <input type="text" placeholder="Digite seu endereço..." aria-label="Digite seu endereço..."
-                            name="endereco" required>
-                    </div>
-                    <div class="cadastro">
-                        <label>Número</label>
-                        <input type="text" placeholder="Digite o número da casa..."
-                            aria-label="Digite o número da casa..." name="numero" required>
-                    </div>
-                    <div class="cadastro">
-                        <label>Bairro</label>
-                        <input type="text" placeholder="Digite seu bairro..." aria-label="Digite seu bairro..."
-                            name="bairro" required>
-                    </div>
-                    <div class="cadastro">
-                        <label>E-mail</label>
-                        <input type="email" placeholder="Digite seu e-mail..." aria-label="Digite seu e-mail..."
-                            name="email" required>
-                    </div>
-                    <div class="cadastro">
-                        <label>Senha</label>
-                        <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
-                            name="senha" required>
-                    </div>
-                    <div class="btn">
-                        <button type="submit"><b>CADASTRAR</b></button>
-                    </div>
-                </form>
+        <div class="cadastroelogin_pag">
+            <div class="cards">
+                <div class="card_1">
+                    <h3>FAÇA LOGIN</h3>
+                    <form method="POST">
+                        <div class="login">
+                            <label>Usuário</label>
+                            <input type="text" placeholder="Digite seu nome..." aria-label="Digite seu nome..."
+                                name="usuario" required>
+                        </div>
+                        <div class="login">
+                            <label>Senha</label>
+                            <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
+                                name="senha" required>
+                        </div>
+                        <div class="btn">
+                            <button type="submit"><b>ACESSAR</b></button>
+                        </div>
+                    </form>
+                </div>
+                <div class="card_2">
+                    <h3>CADASTRAR-SE</h3>
+                    <form method="POST">
+                        <div class="cadastro">
+                            <label>Nome</label>
+                            <input type="text" placeholder="Digite o nome completo..."
+                                aria-label="Digite o nome completo..." name="nome" required>
+                        </div>
+                        <div class="cadastro">
+                            <label>CPF</label>
+                            <input type="text" placeholder="Digite seu CPF..." aria-label="Digite seu CPF..." name="cpf"
+                                required>
+                        </div>
+                        <div class="cadastro">
+                            <label>Idade</label>
+                            <input type="text" placeholder="Digite sua idade" aria-label="Digite sua idade.." name="idade"
+                                required>
+                        </div>
+                        <div class="cadastro">
+                            <label>Telefone</label>
+                            <input type="text" placeholder="Digite seu telefone..." aria-label="Digite seu telefone..."
+                                name="tel" required>
+                        </div>
+                        <div class="cadastro">
+                            <label>CEP</label>
+                            <input type="text" placeholder="Digite seu CEP..." aria-label="Digite seu CEP..." name="cep"
+                                required>
+                        </div>
+                        <div class="cadastro">
+                            <label>Endereço</label>
+                            <input type="text" placeholder="Digite seu endereço..." aria-label="Digite seu endereço..."
+                                name="endereco" required>
+                        </div>
+                        <div class="cadastro">
+                            <label>Número</label>
+                            <input type="text" placeholder="Digite o número da casa..."
+                                aria-label="Digite o número da casa..." name="numero" required>
+                        </div>
+                        <div class="cadastro">
+                            <label>Bairro</label>
+                            <input type="text" placeholder="Digite seu bairro..." aria-label="Digite seu bairro..."
+                                name="bairro" required>
+                        </div>
+                        <div class="cadastro">
+                            <label>E-mail</label>
+                            <input type="email" placeholder="Digite seu e-mail..." aria-label="Digite seu e-mail..."
+                                name="email" required>
+                        </div>
+                        <div class="cadastro">
+                            <label>Senha</label>
+                            <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
+                                name="senha" required>
+                        </div>
+                        <div class="btn">
+                            <button type="submit"><b>CADASTRAR</b></button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </main>
