--- a/finalDaReserva.html
+++ b/finalDaReserva.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Smart sale</title>
-    <link rel="stylesheet" href="css/smart sale.css">
+    <link rel="stylesheet" href="css/final.css">
 </head>
 
 <body>
@@ -15,24 +15,25 @@
     </header>
 
     <main>
-        <h1>Final da Reserva</h1>
-        <div class="container">
-            <div>
-            <section class="esquerdo">
-                <div class="texto">
-                    <h3>Seu produto foi reservado com sucesso!</h3>
-                </div>
+        <div class="finalreserva_pag">
+            <h1>Final da Reserva</h1>
+            <div class="container">
+                <div>
+                <section class="esquerdo">
+                    <div class="texto">
+                        <h3>Seu produto foi reservado com sucesso!</h3>
+                    </div>
 
-                <div class="textos2">
-                    <p>Detalhes da Reserva</p>
-                    <P>Data de entrega</P>
-                    <p>Quantidade</p>
+                    <div class="textos2">
+                        <p>Detalhes da Reserva</p>
+                        <P>Data de entrega</P>
+                        <p>Quantidade</p>
+                    </div>
+                </section>
+                <section class="direito">
+                    <img src="./img/E11-3505-006_zoom1.jpg" alt="imagem do produto, salto alto">
+                </section>
                 </div>
-            </section>
-            <section class="direito">
-                <img src="./img/E11-3505-006_zoom1.jpg" alt="imagem do produto, salto alto">
-
-            </section>
             </div>
         </div>
     </main>
