--- a/paginaRanking.html
+++ b/paginaRanking.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/ranking.css">
+    <link rel="stylesheet" href="css/final.css">
     <title>SMART SALE - RANKING</title>
 </head>
 
@@ -42,99 +42,101 @@
         </div>
     </header>
     <main>
-        <div class="div">
-            <section class="descricao">
-                <h3>Sobre o ranking</h3>
-                <p>Descrição do ranking: quem entra nele, como entra, influência na causa e tudo mais</p>
-            </section>
-            <section class="ranking">
-                <h3>Ranking</h3>
-                <table>
-                    <thead>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Thiago Nascimento</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Vitor Martins</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Larissa Azevedo</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Leonardo Araujo</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>Marcela Alicia</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>Carlos Morette</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>Claudio</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>Claudio</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>9</td>
-                            <td>Claudio</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>10</td>
-                            <td>Claudio</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>11</td>
-                            <td>Claudio</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>12</td>
-                            <td>Claudio</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>13</td>
-                            <td>Claudio</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>14</td>
-                            <td>Claudio</td>
-                            <td>100</td>
-                        </tr>
-                        <tr>
-                            <td>15</td>
-                            <td>Claudio</td>
-                            <td>100</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
-        </div>
-        <br>
-        <div class="botao">
-            <a href="perfil.html" class="a-botao" title="Ir para o perfil">Descubra a sua pontuação em seu perfil!</a>
+        <div class="ranking_pag">
+            <div class="div">
+                <section class="descricao">
+                    <h3>Sobre o ranking</h3>
+                    <p>Descrição do ranking: quem entra nele, como entra, influência na causa e tudo mais</p>
+                </section>
+                <section class="ranking">
+                    <h3>Ranking</h3>
+                    <table>
+                        <thead>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Thiago Nascimento</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Vitor Martins</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Larissa Azevedo</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Leonardo Araujo</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>Marcela Alicia</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>6</td>
+                                <td>Carlos Morette</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>7</td>
+                                <td>Claudio</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>8</td>
+                                <td>Claudio</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>9</td>
+                                <td>Claudio</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>10</td>
+                                <td>Claudio</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>11</td>
+                                <td>Claudio</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>12</td>
+                                <td>Claudio</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>13</td>
+                                <td>Claudio</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>14</td>
+                                <td>Claudio</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>15</td>
+                                <td>Claudio</td>
+                                <td>100</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
+            </div>
+            <br>
+            <div class="botao">
+                <a href="perfil.html" class="a-botao" title="Ir para o perfil">Descubra a sua pontuação em seu perfil!</a>
+            </div>
         </div>
     </main>
     <footer>
