--- a/perfil.html
+++ b/perfil.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/perfil.css">
+    <link rel="stylesheet" href="css/final.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>SMART SALE - PERFIL</title>
@@ -45,37 +45,39 @@
         </div>
     </header>
     <main>
-        <h2>Débora Nascimento</h2>
-        <div class="cima">
-            <section class="esquerdo">
-                <img src="img/Débora.jpg" alt="foto de perfil do usuario">
-            </section>
+        <div class="perfil_pag">
+            <h2>Débora Nascimento</h2>
+            <div class="cima">
+                <section class="esquerdo">
+                    <img src="img/Débora.jpg" alt="foto de perfil do usuario">
+                </section>
 
-            <section class="direito">
-                <div class="textos">
-                    <h3>Dados pessoais</h3>
-                    <p>Endereço: Rua São Paulo, 500 - SP</p>
-                    <p>Data de nascimento: 25/04/1990</p>
-                    <p>Sexo: Feminino</p>
-                </div>
-
-                <div class="textos">
-                    <h3>Contato</h3>
-                    <p>E-mail:debora.nasc@hotmail.com</p>
-                    <p>celular:(11)94444-5678</p>
-                </div>
-            </section>
-        </div>
-
-        <div class="baixo">
-            <section class="centro">
-                <div class="textos">
-                    <h2>Posição ranking</h2>
-                    <div class="posranking">
-                        <p>100 pontos</p>
+                <section class="direito">
+                    <div class="textos">
+                        <h3>Dados pessoais</h3>
+                        <p>Endereço: Rua São Paulo, 500 - SP</p>
+                        <p>Data de nascimento: 25/04/1990</p>
+                        <p>Sexo: Feminino</p>
                     </div>
-                </div>
-            </section>
+
+                    <div class="textos">
+                        <h3>Contato</h3>
+                        <p>E-mail:debora.nasc@hotmail.com</p>
+                        <p>celular:(11)94444-5678</p>
+                    </div>
+                </section>
+            </div>
+
+            <div class="baixo">
+                <section class="centro">
+                    <div class="textos">
+                        <h2>Posição ranking</h2>
+                        <div class="posranking">
+                            <p>100 pontos</p>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </main>
 
